--- a/visualization/src/visualize_OmicsIntegrator_results_with_CytoscapeJS_lib.htm
+++ b/visualization/src/visualize_OmicsIntegrator_results_with_CytoscapeJS_lib.htm
@@ -18,16 +18,43 @@
     }
 </style>
 <style>
-.legend { list-style: none; margin: 0 0 0 60px;}
+/* create a legend */
+.legend { list-style: none; margin: 0 0 0 54px;}
 .legend li { float: left; margin-right: 10px;}
 .legend span { border: 1px solid #ccc; float: left; width: 12px; height: 12px; margin: 2px; }
-.legend .positiveprotein { background-color: red; }
+
+/* legend for node colors (protein-level changes) */
+.legend .positiveprotein {width: 6px; height: 13px; background: red; position: relative; border: 0px solid white; margin: 3px; margin-right: 8px;}
+.legend .positiveprotein:before { content: ""; position: absolute; left: -6px; top: 0; background: #be0101; width: 6px; height: 13px; border: 0px solid white;}
+.legend .positiveprotein:after { content: ""; position: absolute; right: -6px; top: 0; background: #ff9999; width: 6px; height: 13px; border: 0px solid white;}
 .legend .zeroprotein { background-color: #ccffff; }
-.legend .negativeprotein { background-color: blue; }
+.legend .negativeprotein {width: 6px; height: 13px; background: blue; position: relative; border: 0px solid white; margin: 3px; margin-right: 8px;}
+.legend .negativeprotein:before { content: ""; position: absolute; left: -6px; top: 0; background: #000066; width: 6px; height: 13px; border: 0px solid white;}
+.legend .negativeprotein:after { content: ""; position: absolute; right: -6px; top: 0; background: #9999ff; width: 6px; height: 13px; border: 0px solid white;}
 .legend .genenode { background-color: #40bf40; }
+
+/* legend for node border colors (gene-level changes) */
 .legend .positivegene { background-color: white; border-color: orange; border: 4px solid orange; width: 8px; height: 8px;}
 .legend .zerogene { background-color: white; border-color: gray;}
 .legend .negativegene { background-color: white; border-color: #990099; border: 4px solid #990099; width: 8px; height: 8px;}
+
+/* legend for edge colors (interaction types) */
+.legend .ppedge { background-color: #999999; border-color: white; border: 6px solid white; width: 30px; height: 4px; margin-right: 1px;}
+.legend .tpedge { background-color: #98E907; position: relative; border-color: white; border: 6px solid white; width: 30px; height: 4px; margin-right: 3px;}
+.legend .tpedge:after { content: ""; position: absolute; right: -6px; top: -3px; width: 0; height: 0; border-top: 5.5px solid transparent; border-left: 6px solid #98E907; border-bottom: 5.5px solid transparent; }
+.legend .pdedge { background-color: #339900; position: relative; border-color: white; border: 6px solid white; width: 30px; height: 4px; margin-right: 3px;}
+.legend .pdedge:after { content: ""; position: absolute; right: -6px; top: -3px; width: 0; height: 0; border-top: 5.5px solid transparent; border-left: 6px solid #339900; border-bottom: 5.5px solid transparent; }
+
+/* legend for node shapes (node types) */
+.legend .shapes { width: 0; height: 0; background-color: white; border-color: white; margin: 10px;}
+.legend .rectangle { width: 18px; height: 10px; background: black; border-color: white; margin: 3px;}
+.legend .oval { width: 18px; height: 9px; background: black; -moz-border-radius: 10px / 5px; -webkit-border-radius: 10px / 5px; border-radius: 10px / 5px; border-color: black; margin: 4px;}
+.legend .triangle { width: 0; height: 0; border-left: 9px solid transparent; border-right: 9px solid transparent; border-bottom: 12px solid black; border-top: 1px solid transparent;}
+.legend .diamond { width: 0; height: 0; border: 11px solid transparent; border-bottom: 6.5px solid black; position: relative; top: -11px; } 
+.legend .diamond:after { content: ''; position: absolute; left: -11px; top: 6.5px; width: 0; height: 0; border: 11px solid transparent; border-top: 6.5px solid black; }
+.legend .hexagon { width: 12px; height: 11px; background: black; position: relative; border-color: white; margin: 3px; margin-right: 6px;}
+.legend .hexagon:before { content: ""; position: absolute; left: -6px; top: 0; width: 0; height: 0; border-top: 5.5px solid transparent; border-right: 6px solid black; border-bottom: 5.5px solid transparent; }
+.legend .hexagon:after { content: ""; position: absolute; right: -6px; top: 0; width: 0; height: 0; border-top: 5.5px solid transparent; border-left: 6px solid black; border-bottom: 5.5px solid transparent; }
 </style>
 <body>
   <form name="formJSON"> 
@@ -43,17 +70,31 @@
     <li><span class="positivegene"></span> Gene-Level Change > 0</li>
     <li><span class="zerogene"></span> Gene-Level Change = 0</li>
     <li><span class="negativegene"></span> Gene-Level Change < 0</li>
+    <li><span class="ppedge"></span> Protein--Protein / Protein--Metabolite</li>
+    <li><span class="tpedge"></span> mRNA-->Protein</li>
+    <li><span class="pdedge"></span> Protein-->mRNA</li>
+    <li><span class="shapes"></span> Node Shapes:</li>
+    <li><span class="rectangle"></span> Protein</li>
+    <li><span class="oval"></span> Metabolite</li>
+    <li><span class="triangle"></span> TF</li>
+    <li><span class="diamond"></span> mRNA</li>
+    <li><span class="hexagon"></span> Steiner</li>
 </ul>
 </body>
 <body>
   <div id="cy"></div>
   <script>
+  /*
+   * Use the Cytoscape.js library to display the network.
+   * Use the cose layout algorithm for layout placement. 
+   */
+
   var cy = cytoscape({
     container: document.getElementById('cy'),
     style: style[0].style,
     layout: {
         name: 'cose',
-        padding: 30,
+        padding: 45,
         randomize: true,
         componentSpacing: 250,
         nodeRepulsion: function( node ){ return 400000; },
@@ -70,6 +111,12 @@
     },
     elements: graph.elements
     });
+
+    /* 
+     * saveJSON() function:
+     *
+     * Save current network to a JSON file on the local machine.
+     */
 
     function saveJSON() 
     { 
