--- a/visualization/src/visualize_user_saved_JSON_file_with_CytoscapeJS_lib.htm
+++ b/visualization/src/visualize_user_saved_JSON_file_with_CytoscapeJS_lib.htm
@@ -5,7 +5,7 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.0.0/cytoscape.js"></script>
  <script src="graph.js"></script>
  <script src="style.js"></script>
- <script src="../src/FileSaver.js"></script>
+ <script src="FileSaver.js"></script>
 
 </head>
 <style>
