--- a/visualization/src/visualize_OmicsIntegrator_results_with_CytoscapeJS_lib.htm
+++ b/visualization/src/visualize_OmicsIntegrator_results_with_CytoscapeJS_lib.htm
@@ -3,6 +3,7 @@
 <head>
  <title>Omics Integrator Result</title>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.0.0/cytoscape.js"></script>
+ <script src="https://use.fontawesome.com/a681668be3.js"></script>
  <script src="graph.js"></script>
  <script src="style.js"></script>
  <script src="FileSaver.js"></script>
@@ -13,14 +14,18 @@
         width: 100%;
         height: 100%;
         position: absolute;
-        top: 25px;
-        left: 0px;
+        top: 48px;
+        left: 245px;
     }
 </style>
 <style>
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+body{
+  font-family: 'Open Sans', sans-serif;
+}
+
 /* create a legend */
-.legend { list-style: none; margin: 0 0 0 54px;}
-.legend li { float: left; margin-right: 10px;}
+.legend { list-style: none; padding:0; margin:0; }
 .legend span { border: 1px solid #ccc; float: left; width: 12px; height: 12px; margin: 2px; }
 
 /* legend for node colors (protein-level changes) */
@@ -31,7 +36,6 @@
 .legend .negativeprotein {width: 6px; height: 13px; background: blue; position: relative; border: 0px solid white; margin: 3px; margin-right: 8px;}
 .legend .negativeprotein:before { content: ""; position: absolute; left: -6px; top: 0; background: #000066; width: 6px; height: 13px; border: 0px solid white;}
 .legend .negativeprotein:after { content: ""; position: absolute; right: -6px; top: 0; background: #9999ff; width: 6px; height: 13px; border: 0px solid white;}
-.legend .genenode { background-color: #40bf40; }
 
 /* legend for node border colors (gene-level changes) */
 .legend .positivegene { background-color: white; border-color: orange; border: 4px solid orange; width: 8px; height: 8px;}
@@ -46,40 +50,93 @@
 .legend .pdedge:after { content: ""; position: absolute; right: -6px; top: -3px; width: 0; height: 0; border-top: 5.5px solid transparent; border-left: 6px solid #339900; border-bottom: 5.5px solid transparent; }
 
 /* legend for node shapes (node types) */
-.legend .shapes { width: 0; height: 0; background-color: white; border-color: white; margin: 10px;}
 .legend .rectangle { width: 18px; height: 10px; background: black; border-color: white; margin: 3px;}
 .legend .oval { width: 18px; height: 9px; background: black; -moz-border-radius: 10px / 5px; -webkit-border-radius: 10px / 5px; border-radius: 10px / 5px; border-color: black; margin: 4px;}
 .legend .triangle { width: 0; height: 0; border-left: 9px solid transparent; border-right: 9px solid transparent; border-bottom: 12px solid black; border-top: 1px solid transparent;}
-.legend .diamond { width: 0; height: 0; border: 11px solid transparent; border-bottom: 6.5px solid black; position: relative; top: -11px; } 
-.legend .diamond:after { content: ''; position: absolute; left: -11px; top: 6.5px; width: 0; height: 0; border: 11px solid transparent; border-top: 6.5px solid black; }
+.legend .diamond { width: 0; height: 0; border: 11px solid transparent; border-bottom: 6.5px solid #40bf40; position: relative; top: -11px;} 
+.legend .diamond:after { content: ''; position: absolute; left: -11px; top: 6.5px; width: 0; height: 0; border: 11px solid transparent; border-top: 6.5px solid #40bf40; }
 .legend .hexagon { width: 12px; height: 11px; background: black; position: relative; border-color: white; margin: 3px; margin-right: 6px;}
 .legend .hexagon:before { content: ""; position: absolute; left: -6px; top: 0; width: 0; height: 0; border-top: 5.5px solid transparent; border-right: 6px solid black; border-bottom: 5.5px solid transparent; }
 .legend .hexagon:after { content: ""; position: absolute; right: -6px; top: 0; width: 0; height: 0; border-top: 5.5px solid transparent; border-left: 6px solid black; border-bottom: 5.5px solid transparent; }
+
+/* Search bar */
+.searchTerm {
+  float: left;
+  border: 3px solid #00B4CC;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton { 
+  right: -50px;
+  width: 40px;
+  height: 36px;
+  border: 1px solid #00B4CC;
+  background: #00B4CC;
+  text-align: center;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+input[type=button] {
+  border: 3px solid #00B4CC;
+  height: 36px;
+  border-radius: 5px;
+  outline: none;
+  background-color: white;
+}
 </style>
+
+<!-- Body with JSON button, search bar, legend, & network-->
 <body>
-  <form name="formJSON"> 
-  <input type="button" onClick="saveJSON();" value="Save JSON">
-  </form> 
-</body>
-<body>
-<ul class="legend">
+  <table width="100%" border="0">
+    <tr>
+    <td width=110px style="padding: 0; margin: 0;">
+      <img src="http://fraenkel-nsf.csbi.mit.edu/omicsintegrator/omicsI_logo.png" height=85px>
+    </td>
+    <td style="vertical-align:top" width=190px>
+      <div class="search">
+        <input type="text" class="searchTerm" placeholder="Search for Node">
+        <button type="submit" class="searchButton"><i class="fa fa-search"></i></button>
+      </div>
+    </td>
+    <td style="vertical-align:top">
+      <form name="formJSON"> 
+        <input type="button" onClick="saveJSON();" value="Save JSON">
+      </form>
+    </td>
+    </tr>
+  </table>
+  <ul class="legend">
+    <li>Input Data:</li>
     <li><span class="positiveprotein"></span> Protein-Level Change > 0</li>
     <li><span class="zeroprotein"></span> Protein-Level Change = 0</li>
     <li><span class="negativeprotein"></span> Protein-Level Change < 0</li>
-    <li><span class="genenode"></span> mRNA</li>
     <li><span class="positivegene"></span> Gene-Level Change > 0</li>
     <li><span class="zerogene"></span> Gene-Level Change = 0</li>
     <li><span class="negativegene"></span> Gene-Level Change < 0</li>
-    <li><span class="ppedge"></span> Protein--Protein / Protein--Metabolite</li>
-    <li><span class="tpedge"></span> mRNA-->Protein</li>
-    <li><span class="pdedge"></span> Protein-->mRNA</li>
-    <li><span class="shapes"></span> Node Shapes:</li>
+    <br/>
+    <li>Interaction Types:</li>
+    <li><span class="ppedge"></span> Protein-Protein or <br/> <span style="display:inline-block; width: 40px; border: none;"></span> Protein-Metabolite</li>
+    <li><span class="tpedge"></span> mRNA &rarr; Protein Product</li>
+    <li><span class="pdedge"></span> TF &rarr; mRNA target <br/> <span style="display:inline-block; width: 40px; border: none;"></span> (from Garnet)</li>
+    <br/>
+    <li> Molecule Types:</li>
     <li><span class="rectangle"></span> Protein</li>
     <li><span class="oval"></span> Metabolite</li>
     <li><span class="triangle"></span> TF</li>
     <li><span class="diamond"></span> mRNA</li>
     <li><span class="hexagon"></span> Steiner</li>
-</ul>
+  </ul>
 </body>
 <body>
   <div id="cy"></div>
