--- a/visualization/src/visualize_user_saved_JSON_file_with_CytoscapeJS_lib.htm
+++ b/visualization/src/visualize_user_saved_JSON_file_with_CytoscapeJS_lib.htm
@@ -94,6 +94,9 @@ input[type=button] {
   outline: none;
   background-color: white;
 }
+input[type=button]:hover {background-color: #F2F1F2;}
+input[type=button]:active {background-color: #908F90;}
+
 </style>
 
 <!-- Body with JSON button, search bar, legend, & network-->
