--- a/visualization/src/visualize_OmicsIntegrator_results_with_CytoscapeJS_lib.htm
+++ b/visualization/src/visualize_OmicsIntegrator_results_with_CytoscapeJS_lib.htm
@@ -15,8 +15,8 @@
         height: 100%;
         position: absolute;
         top: 48px;
-        left: 245px;
-    }
+        left: 250px;
+        }
 </style>
 <style>
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
@@ -65,6 +65,7 @@ body{
   border: 3px solid #00B4CC;
   padding: 5px;
   height: 20px;
+  width: 130px;
   border-radius: 5px;
   outline: none;
   color: #9DBFAF;
@@ -94,6 +95,12 @@ input[type=button] {
 input[type=button]:hover {background-color: #F2F1F2;}
 input[type=button]:active {background-color: #908F90;}
 
+select {
+  background: transparent;
+  border: 0;
+}
+select option { background: #F2F1F2; }
+
 </style>
 
 <!-- Body with JSON button, search bar, legend, & network-->
@@ -105,8 +112,10 @@ input[type=button]:active {background-color: #908F90;}
     </td>
     <td style="vertical-align:top" width=190px>
       <div class="search">
-          <input type="text" class="searchTerm" id='search_text' placeholder="Search for Node"> <!--onKeyUp="alert('keyup')"-->
-        <button type="button" class="searchButton" id='search_button' onClick='javascript:searchGraph()'><i class="fa fa-search"></i></button>
+          <input type="text" class="searchTerm" id='search_text' placeholder="Search for Node" onKeyUp='javascript:searchType(event)'> 
+          <button type="button" class="searchButton" id='search_button' onClick='javascript:searchGraph()'><i class="fa fa-search"></i></button>
+          <br/>
+          <select name="dropDown" id="dropDownList" size="5" onchange='selectDrop(this)'>
       </div>
     </td>
     <td style="vertical-align:top">
@@ -177,15 +186,65 @@ input[type=button]:active {background-color: #908F90;}
 
     function saveJSON() 
     { 
-    var jsonBlob = new Blob([JSON.stringify( cy.json() )], { type: 'application/javascript;charset=utf-8' });
-    saveAs(jsonBlob, "graph_json.json");
+      var jsonBlob = new Blob([JSON.stringify( cy.json() )], { type: 'application/javascript;charset=utf-8' });
+      saveAs(jsonBlob, "graph_json.json");
     } 
 
+    /*
+     * searchGraph() function:
+     *
+     * Get node matching input name and highlights and zooms to that node
+     * Otherwise alerts user that node does not exist
+     */
+
     function searchGraph() {
-    txt = document.getElementById('search_text').value;
-    node = cy.filter( 'node[name="'.concat(txt,'"]') );
-    node.select();
+      var txt = document.getElementById('search_text').value;
+      var node = cy.filter( 'node[name="'.concat(txt,'"]') );
+      if(node.isNode()) { 
+        node.select();
+        cy.animate({ zoom: 0.8, center: {eles: node} },{duration:500});
+      }
+      else { alert("Node ".concat(txt, " does not exist.")); }
     }
+
+    /*
+     * searchType() function:
+     *
+     * While typing in search bar, if type "Enter" then searchGraph
+     * Otherwise create dropdown menu of existing nodes starting with text
+     */
+
+    function searchType(e) {
+      var charCode = (typeof e.which === "number") ? e.which : e.keyCode;
+      if (charCode == 13) { searchGraph(); }
+      else {
+        var drop = document.getElementById("dropDownList")
+        while (drop.options.length > 0) { drop.remove(0); } /* Clear dropdown - working?? */
+        var txt = document.getElementById('search_text').value;
+        if (txt.length > 0) {
+          var nodes = cy.filter( 'node[name^="'.concat(txt,'"]') );
+          nodes.forEach(function(ele) {
+            var option = document.createElement("OPTION");
+            option.text = ele.data('name');
+            option.value = ele.data('name');
+            drop.options.add(option);
+          })
+        }
+      }
+    }
+
+    /*
+     * selectDrop() function:
+     *
+     * Search when user selects from drop-down list of selected nodes
+     */
+
+    function selectDrop(dropDownList) {
+      var value = dropDownList.value;
+      document.getElementById('search_text').value = value
+      searchGraph();
+    }
+
   </script>
 </body>
 </html>
