--- a/visualization/src/visualize_user_saved_JSON_file_with_CytoscapeJS_lib.htm
+++ b/visualization/src/visualize_user_saved_JSON_file_with_CytoscapeJS_lib.htm
@@ -4,9 +4,9 @@
  <title>Omics Integrator Result</title>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.0.0/cytoscape.js"></script>
  <script src="https://use.fontawesome.com/a681668be3.js"></script>
+ <script src="https://cdn.rawgit.com/eligrey/FileSaver.js/e9d941381475b5df8b7d7691013401e171014e89/FileSaver.min.js"></script>
  <script src="graph.js"></script>
  <script src="style.js"></script>
- <script src="FileSaver.js"></script>
 
 </head>
 <style>
