--- a/example/graph.html
+++ b/example/graph.html
@@ -68,8 +68,14 @@ header > div > input {
 
         <!-- Amount of Force -->
         <div>
-            <label for="show_only_solution_edges">Force</label>
+            <label for="">Force</label>
             <input type="range" name="" min="10" max="800" step="1" value="100" onchange="repulsion_strength=this.value;restart();">
+        </div>
+
+        <!-- Edge Opacity -->
+        <div>
+            <label for="">Opacity</label>
+            <input type="range" name="edge_opacity" id="edge_opacity" min="0" max="1" step="0.01" value="1" onchange="edge_opacity=this.value;">
         </div>
 
         <!-- Color By -->
@@ -179,6 +185,7 @@ var highlight_color = "blue";
 var highlight_trans = 0.1;
 var default_node_color = "#ccc";
 var default_link_color = "#aaa";
+var edge_opacity = 1.0;
 var nominal_base_node_size = 8;
 var nominal_text_size = 10;
 var max_text_size = 24;
@@ -188,6 +195,8 @@ var max_base_node_size = 36;
 var min_zoom = 0.2;
 var max_zoom = 7;
 var group_boundary_margin = 40;
+var group_compactness = 0.000001;
+var group_padding = 10;
 
 var tocolor = "fill";
 var towhite = "stroke";
@@ -201,6 +210,7 @@ var g = svg.append("g");
 svg.style("cursor", "move");
 
 var cola = cola.d3adaptor(d3).size([w, h]);
+cola.groupCompactness = group_compactness;
 
 
 /////////////////////////////////////////////////////////////////////////////
@@ -225,8 +235,6 @@ function hasConnections(a) {
 function isNumber(n) {
     return !isNaN(parseFloat(n)) && isFinite(n);
 }
-
-
 
 
 var groups = {
@@ -261,6 +269,9 @@ graph.nodes.forEach(function (n) {
     n.height = n.width = group_boundary_margin;
 });
 
+groups['location'].forEach(function (g) {
+    g.padding = group_padding * (g.groups.length + 1);
+});
 
 /////////////////////////////////////////////////////////////////////////////
                       ///////    Draw Graph    ///////
@@ -351,7 +362,6 @@ function restart() {
                })
                .merge(link);
 
-
     // Changing what the grouping is
     if (groupBy) {
         group = group.data([]);
@@ -361,7 +371,9 @@ function restart() {
                      .insert('rect', '.link')
                      .attr('rx',5)
                      .attr('ry',5)
+                     .attr("class", ".group")
                      .style("fill", function (d) { return group_color(d.id); })
+                     .style("opacity", function (d) { return 1/d.groups.length; })
                      .call(cola.drag);
 
         label = label.data([]);
@@ -563,6 +575,11 @@ $("#groupBy").change(function() {
 $("#turnForceOff").change(function() {
     turnForceOff = this.checked; restart();
 });
+
+// Change edge opacity
+$("#edge_opacity").change(function(){
+    link.style("opacity", function (d) { return edge_opacity; })
+})
 
 
 /////////////////////////////////////////////////////////////////////////////
